Bug 1292593 - Add missing border to autocomplete popups. r=gijs
UltraBlame original commit: 3742f881a123d9d5ebf2427abdb7158bfda4f3d6

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -9230,16 +9230,6 @@ width
 36px
 ;
 }
-#
-PopupAutoCompleteRichResult
-{
-margin
--
-top
-:
-1px
-;
-}
 .
 autocomplete
 -
